--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
+# 1) .gitignore - this file should have the name of the files and folders that you want Git to ignore and not track it in the repository
 .venv/
