--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
 # 1) .gitignore - this file should have the name of the files and folders that you want Git to ignore and not track it in the repository
 .venv/
-__pycache__/PayrollDeductionClass.cpython-37.pyc
-EmployeeClass.cpython-37.pyc
+__pycache__
